# PAIRS_TRADING_SSM

./: .gitignore  README.md  backtest.py  dataGQ.xlsx  data_loader.py  kalman_model1.py  kalman_qmc.py  main.ipynb  optimize_rules.py  paper_models.py  pyproject.toml  requirements.txt  run_optimize_UL.py  run_paper_table1.py  run_pep_ko_baseline.py  simulation.py  strategies.py  zhang_paper.txt
pairs-ssm/: README.md  pyproject.toml  results_paper_replication.csv
pairs-ssm/Extension/: Replication_Full_Appendix_2025.py  cointegration_stability.py  persistance_cointegration.ipynb  portfolio_construction_pairs_trading.ipynb  prolongation_periode.ipynb  select_pairs.py  utils.py
pairs-ssm/Extension/Data/: commodities_2019_wide_harmonized.xlsx  commodities_tickers.xlsx  crypto_2019_wide_harmonized.xlsx  (+12 more)
pairs-ssm/clean_stuff/: 01-simulation.ipynb  02-Table1.ipynb  03-Strat_ext.ipynb  03-Table 2,3, Annexes A1-6.py  04-Table1_ext.ipynb  05-Replication Tables 2,3 et Annexes.ipynb  05-Table 2,3 et Annexes.ipynb  06 - Extension_prolongation_periode_etude.ipynb  06-Extension_Kim_Filter_MS-SSM_with_Kupiec.ipynb  07-Extension_Kim_Filter_MS-SSM_with_Kupiec.ipynb  08 - persistance_cointegration.ipynb
pairs-ssm/configs/: backtest.yaml  models.yaml
pairs-ssm/data/: pairs_commodities.csv  pairs_crypto.csv  zhang_results_all_assets_IS_clean.csv  zhang_results_all_assets_OOS_clean.csv
pairs-ssm/notebooks/: 01_pep_ko_analysis.ipynb  Heteroscedastic_model.ipynb  Homoscedastic_model.ipynb  Paper_Replication_Real_Data.ipynb  Test_application2.ipynb  benchmark_trading_strats.ipynb
pairs-ssm/scripts/: analyze_results_differences.py  diagnose_paper_differences.py  find_paper_configuration.py  replicate_simulation_table1.py  run_paper_replication.py  run_pep_ko_backtest.py
pairs-ssm/tests/: 06-Extension_Kim_Filter_MS-SSM.ipynb  Replication Table 2-3.py  Table 2-3-A1.py  Test Extension Kim.ipynb  Test_applicatiob.ipynb  __init__.py  test_core.py
(+166 files in other folders)
